Scrollbar bug fixed

--- a/CSS/hjwhittaker.css
+++ b/CSS/hjwhittaker.css
@@ -73,6 +73,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   cursor: none;
+  overflow: hidden;
 }
 
 p {
